--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "@types/styled-components": "^5.1.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.2.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.0.1"
   },
@@ -49,6 +51,7 @@
     "@storybook/addon-links": "^6.1.21",
     "@storybook/node-logger": "^6.1.21",
     "@storybook/preset-create-react-app": "^3.1.7",
-    "@storybook/react": "^6.1.21"
+    "@storybook/react": "^6.1.21",
+    "babel-plugin-styled-components": "^1.12.0"
   }
 }
