feat: add ability for button variant

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
     "node_modules",
     "build",
     "scripts",
-    "lib/**/*",
+    "lib",
     "storybook-static",
     "src/**/_story.tsx"
   ]
